--- a/plugins/org.springframework.ide.eclipse.beans.ui.livegraph/resources/livebeans/liveBeansTree.html
+++ b/plugins/org.springframework.ide.eclipse.beans.ui.livegraph/resources/livebeans/liveBeansTree.html
@@ -3,8 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link type="text/css" rel="stylesheet" href="css/treestyle.css" />
-<script type="text/javascript" src="js/d3.js"></script>
-<script type="text/javascript" src="js/d3.layout.js"></script>
+<script src="http://d3js.org/d3.v3.js"></script>
 <style type="text/css">
 .node circle {
 	cursor: pointer;
